docs: add docs for preorders endpoints
